--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ playServicesLocation = "21.1.0"
 room = "2.6.0"
 ksp = "1.9.0-1.0.13"
 lifecycle = "2.6.2"
+firebaseAppCheck="17.1.2"
 
 # Nossas versões customizadas
 firebaseBom = "32.7.0"
